--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
                       <span class='clickable'>// 👾 games //</span>
                     </summary>
                     <ul>
+                        <li>
+                            Games that I've made music for, or had a hand in developing!
+                        </li>
                          <li>
                             <details>
                                 <summary>
@@ -165,6 +168,9 @@
                         <span class='clickable'>// 🎬 film //</span>
                     </summary>
                     <ul>
+                        <li>
+                            Films I've written scores for!
+                        </li>
                         <li>
                             <details>
                                 <summary><span class="clickable">🐊 Preserved Existence</span></summary>
@@ -470,6 +476,9 @@
                       <span class='clickable'>// 🎵 music //</span>
                     </summary>
                     <ul>
+                        <li>
+                            Music I've made just on it's own.
+                        </li>
                         <li>
                             <details>
                                 <summary>
