fixing summary spacing errors

--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
                     </summary>
                     <ul>
                         <li>
-                            Games that I've made music for, or had a hand in developing!
+                            <p style="font-size: 1em;">
+                                Games that I've made music for, or had a hand in developing!
+                            </p>
                         </li>
                          <li>
                             <details>
@@ -169,7 +171,9 @@
                     </summary>
                     <ul>
                         <li>
-                            Films I've written scores for!
+                            <p style="font-size: 1em;">
+                                Films I've written scores for!
+                            </p>
                         </li>
                         <li>
                             <details>
@@ -477,7 +481,9 @@
                     </summary>
                     <ul>
                         <li>
-                            Music I've made just on it's own.
+                            <p style="font-size: 1em;">
+                                Music I've made just on it's own.
+                            </p>
                         </li>
                         <li>
                             <details>
