summary sizing, bio tweak

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     </summary>
                     <ul>
                         <li>
-                            <p>Hello, I'm Oscar, a Brisbane based audio designer who creates original music and sound for games, films, and theatre. I enjoy working in creative and non-conventional ways, in order to represent the essential character of a work.</p>
+                            <p>Hello, I'm Oscar, a Brisbane based audio designer who creates original music and sound for media, with a focus on interactivity. I enjoy working in creative and non-conventional ways, in order to represent the essential character of a work.</p>
                              
                             <p>Collaboration is an integral part of my practise. I always strive to work closely with others to understand, develop and enhance the core of each project I'm involved with. </p>
 
@@ -70,7 +70,7 @@
                     </summary>
                     <ul>
                         <li>
-                            <p style="font-size: 1em;">
+                            <p class="categorydescription">
                                 Games that I've made music for, or had a hand in developing!
                             </p>
                         </li>
@@ -171,7 +171,7 @@
                     </summary>
                     <ul>
                         <li>
-                            <p style="font-size: 1em;">
+                            <p class="categorydescription">
                                 Films I've written scores for!
                             </p>
                         </li>
@@ -481,7 +481,7 @@
                     </summary>
                     <ul>
                         <li>
-                            <p style="font-size: 1em;">
+                            <p class="categorydescription">
                                 Music I've made just on it's own.
                             </p>
                         </li>
