more tweaks, no more embedded godot cause it took page focus

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                                 </summary>
                                 <ul>
                                     <p>A small game about work and it's payoff.</p> 
-                                    <iframe style="width: 480px; height: 432px" allowfullscreen="true" src="https://html-classic.itch.zone/html/11941687/BrickWall0.3.1/index.html" allowtransparency="true" webkitallowfullscreen="true" mozallowfullscreen="true" msallowfullscreen="true" id="game_drop" allow="autoplay; fullscreen *; geolocation; microphone; camera; midi; monetization; xr-spatial-tracking; gamepad; gyroscope; accelerometer; xr; cross-origin-isolated; web-share" frameborder="0"></iframe>
-                                    <p>Controls: <br>Move = Left/Right Arrow Keys<br>Hammer = Spacebar<br>Screenshake Toggle = X key</p>
+                                    <a href="https://oscarj.itch.io/brick-wall"><img src="https://img.itch.zone/aW1nLzE4NTEwOTY4LnBuZw==/315x250%23c/Ftly9Y.png"></a>
+                                    <p><a href="https://oscarj.itch.io/brick-wall">[Play it here]</a></p>
                                 </ul>
                             </details>
                         </li>
@@ -345,8 +345,9 @@
                                         <p>An endearing animated short in which a young chimney sweep must retrieve a lost cat.</p>
                                         <p><em>Dir: Keeley Kirshaw, 2017</em></p>
                                     </li>
-                                    <li>    
-                                        <iframe src="https://player.vimeo.com/video/247899825" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                                    <li>
+                                       <!-- <a href="https://vimeo.com/247899825">[Watch it here]</a>-->
+                                       <iframe src="https://player.vimeo.com/video/247899825" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                                     </li>
                                 </ul>
                             </details>
