showreel bio, no more headings

--- a/showreel.html
+++ b/showreel.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
     <head>
-        <title>Oscar Jemmott</title>
+        <title>Oscar Jemmott | Showreel</title>
         <meta charset="utf-8"/>
         <link rel="stylesheet" href="styles.css"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
@@ -24,9 +24,9 @@
                     </summary>
                     <ul>
                         <li>
-                            <p>Hello, I'm Oscar, a Brisbane based composer, sound-designer and musician who creates original music and sound for games,films, and theatre. I enjoy working in creative and non-conventional ways, in order to represent the essential character of a work.</p>
+                            <p>Hello, I'm Oscar, a Brisbane based audio designer who creates original music and sound for media, with a focus on interactivity. I enjoy working in creative and non-conventional ways, in order to represent the essential character of a work.</p>
                              
-                            <p>I'm always striving to bring life to media through detailed and thoughtful audio. I'm passionate about creating cohesive and rich sounds which enhance the listener's experience and their connection to the work.</p>
+                            <p>Collaboration is an integral part of my practise. I always strive to work closely with others to understand, develop and enhance the core of each project I'm involved with. </p>
 
                             <p> I hold a Bachelor of Music (With Distinction) from QUT, Majoring in Music and Sound Production with a mixed minor focussing on sound design and interaction. I've enjoyed working on animations, films, and games in all kinds of styles.</p> 
                         </li>
@@ -41,7 +41,7 @@
                             <p>A small collection of recent works. For more, head to <a href="https://oscarjemmott.com", style="text-decoration:underline;">my website homepage</a></p>
                         </li>
                         <li>
-                            <h2>// 👞 Sound Design Showreel //</h2>
+                            <p>// 👞 Sound Design Showreel //</p>
                             <ul>
                                 <li>
                                     <iframe width="560" height="315" src="https://www.youtube.com/embed/1u2LBlQc42M?si=TOqvJ7QUn7APoHeb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -49,14 +49,14 @@
                             </ul>
                         </li>
                         <li>
-                            <h2>// 🪐 Sumorbit Music Showcase //</h2>
+                            <p>// 🪐 Sumorbit Music Showcase //</p>
                             <ul>
                                 <li>
                                     <p><iframe width="560" height="315" src="https://www.youtube.com/embed/nO7N8BRDz6A?si=lDeuF0mv5m5pCPKE&amp;start=223" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
                                 </li>
                             </ul>
                          <li>
-                            <h2>// 🗻 Wandering in Rambley Valley //</h2>
+                            <p>// 🗻 Wandering in Rambley Valley //</p>
                             <ul>
                                 <li>
                                         <p>A self directed 1st person game focused on exploring Unity's audio functionality.</p>
@@ -71,7 +71,7 @@
                         </li>
                         </li>
                         <li>
-                            <h2>// 💯 To Share //</h2>
+                            <p>// 💯 To Share //</p>
                                 <ul>
                                     <li>
                                         <p>A project in which I composed 100 short pieces. Making one (almost) every day from July - November of 2018, sharing them on Twitter and Instagram.</p>
@@ -83,7 +83,7 @@
                             </li>
                     </ul>
                 </details>  
-                <footer><p>// code by me :) // (c) Oscar Jemmott, 2019 //</p></footer>
+                <footer><p>// code by me :) // (c) Oscar Jemmott, 2024 //</p></footer>
             </div>
         </div>
     </body>
