--- a/index.html
+++ b/index.html
@@ -135,6 +135,9 @@
                                 </summary>
                                 <ul>
                                     <p>A short and sweet puzzle game where you must throw a torch from one hand to another. Made for Weekly Game Jam #168 with Tom Hawkins.</p> 
+                                    <p>
+                                        <img src="https://img.itch.zone/aW1nLzQzOTU5NTgucG5n/315x250%23c/j7Jl96.png"><a href='https://hawkhawkins.itch.io/arm-game' class='clickable'></a>
+                                    </p>
                                     <p><a href='https://hawkhawkins.itch.io/arm-game' class='clickable'>[Play it!]</a>
                                 </ul>
                             </details>
