--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
                     <ul>
                         <li>
                             <p class="categorydescription">
-                                Games that I've made music for, or had a hand in developing!
+                                Games that I've worked on. Some are just music or sound design, others are solo dev projects.
                             </p>
                         </li>
                          <li>
                             <details>
                                 <summary>
-                                    <span class = "clickable">🪐 SumOrbit</span>
+                                    <span class = "clickable">🪐 SumOrbit - <em>Jett Williams</em></span>
                                 </summary>
                                 <ul>
                                     <p>A mid-century moog inspired soundtrack for an interplanetary brawler developed by Jett Williams</p> 
@@ -131,7 +131,7 @@
                         <li>
                             <details>
                                 <summary>
-                                    <span class = "clickable">👋 Arm Game </span>
+                                    <span class = "clickable">👋 Arm Game - with <em>Tom Hawkins</em></span></span>
                                 </summary>
                                 <ul>
                                     <p>A short and sweet puzzle game where you must throw a torch from one hand to another. Made for Weekly Game Jam #168 with Tom Hawkins.</p> 
@@ -146,10 +146,11 @@
                         <li>
                             <details>
                                 <summary>
-                                    <span class = "clickable">💎 Glimmersmith </span>
+                                    <span class = "clickable">💎 Glimmersmith - with<em> Louis Van Dyke</em></span></span>
                                 </summary>
                                 <ul>
                                     <p>An arcade style twin stick shooter with upgrades and slimes.I had the pleasure working on audio for this with programming by Louis_VD and Art by The Prawn. Made as a part of Kindred Jam 2020.</p> 
+                                    <img src="https://img.itch.zone/aW1nLzM5Mjk3MDEucG5n/347x500/nu7xTY.png">
                                     <!--<p><a href='https://louis-vd.itch.io/glimmersmith' class='clickable'>[Play it!]</a>-->
                                 </ul>
                             </details>
