--- a/showreel.html
+++ b/showreel.html
@@ -18,7 +18,7 @@
             <h1>Oscar Jemmott</h1>
             <p>Music and Sound for Media</p>
             <div class="content"> 
-            <details>
+            <details open='true'>
                     <summary>
                         <span class='clickable'>// 📝 about //</span>
                     </summary>
@@ -34,43 +34,82 @@
                 </details>  
                 <details open='true'>
                     <summary>
-                        <span class='clickable'>// 🎞️ Showreel //</span>
+                        <span class='clickable'>// 🗂️ Portfolio //</span>
                     </summary>
                     <ul>
                         <li>
-                            <p>A small collection of recent works. For more, head to <a href="https://oscarjemmott.com", style="text-decoration:underline;">my website homepage</a></p>
+                            <p>A small collection of recent works. For more, head to <a href="https://oscarjemmott.com", class="clickable">my website homepage</a></p>
                         </li>
                         <li>
-                            <p>// 👞 Sound Design Showreel //</p>
-                            <ul>
-                                <li>
-                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/1u2LBlQc42M?si=TOqvJ7QUn7APoHeb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            <details open='true'>
+                                <summary>
+                                    <p class="clickable">
+                                        // 🔧 FMod Tension Builder //
+                                    </p>
+                                </summary>
+                                <ul>
+                                    <li>
+                                        <p>This self directed project flows between multiple levels of dynamic tension.</p>
+                                    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/mJeD7nZY9kg?si=oOCpJs3Gj6BpVYaI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                                 </li>
                             </ul>
+                            </details>
+                            
                         </li>
                         <li>
-                            <p>// 🪐 Sumorbit Music Showcase //</p>
-                            <ul>
-                                <li>
-                                    <p><iframe width="560" height="315" src="https://www.youtube.com/embed/nO7N8BRDz6A?si=lDeuF0mv5m5pCPKE&amp;start=223" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+                            <details open='true'>
+                                <summary>
+                                    <p class="clickable">
+                                        // 🎆 Splash Audio Design //
+                                    </p>
+                                </summary>
+                                <ul>
+                                    <li>
+                                        <p>
+                                            As a part of my work at Splash, I managed high volumes of audio assets moving in a out of the roblox game on a weekly basis, as well as some sound design. Along with work on other projects like a generative music app. Here are some sound design highlights: 
+                                        </p>
+                                    </li>
+                                    <li>
+                                        <iframe width="560" height="315" src="https://www.youtube.com/embed/1u2LBlQc42M?si=TOqvJ7QUn7APoHeb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                                 </li>
                             </ul>
+                            </details>
+                            <p></p>
+                        </li>
+                        <li>
+                            <details open='true'>
+                                <summary>
+                                    <p class="clickable">
+                                        // 🪐 Sumorbit Music Showcase //
+                                    </p>   
+                                </summary>
+                                <ul>
+                                    <li>
+                                        <p><iframe width="560" height="315" src="https://www.youtube.com/embed/nO7N8BRDz6A?si=lDeuF0mv5m5pCPKE&amp;start=223" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+                                </li>
+                            </ul>
+                            </details>
                          <li>
-                            <p>// 🗻 Wandering in Rambley Valley //</p>
-                            <ul>
-                                <li>
-                                        <p>A self directed 1st person game focused on exploring Unity's audio functionality.</p>
-                                </li>
-                                <li>
-                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/IuNf7EpRFLY?si=V9UTcF6yxvljZV7N" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                                </li>
-                                <li>
-                                    <p><iframe style="border: 0; width: 1 00%; height: 310px;" src="https://bandcamp.com/EmbeddedPlayer/album=560484489/size=large/bgcol=ffffff/linkcol=0687f5/artwork=small/transparent=true/" seamless><a href="https://oscarno.bandcamp.com/album/wandering-in-rambley-valley-original-soundtrack">Wandering In Rambley Valley Original Soundtrack by @oscarno_</a></iframe></p>       
-                                </li>
-                            </ul>
+                            <details open='true'>
+                                <summary>
+                                    <p class="clickable">
+                                        // 🗻 Wandering in Rambley Valley //
+                                    </p>
+                                </summary>
+                                <ul>
+                                    <li>
+                                            <p>A self directed 1st person game focused on exploring Unity's audio functionality. All audio interaction is programmed in C#.</p>
+                                    </li>
+                                    <li>
+                                        <iframe width="560" height="315" src="https://www.youtube.com/embed/IuNf7EpRFLY?si=V9UTcF6yxvljZV7N" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                    </li>
+                                    <li>
+                                        <p><iframe style="border: 0; width: 1 00%; height: 310px;" src="https://bandcamp.com/EmbeddedPlayer/album=560484489/size=large/bgcol=ffffff/linkcol=0687f5/artwork=small/transparent=true/" seamless><a href="https://oscarno.bandcamp.com/album/wandering-in-rambley-valley-original-soundtrack">Wandering In Rambley Valley Original Soundtrack by @oscarno_</a></iframe></p>       
+                                    </li>
+                                </ul>
+                            </details>
                         </li>
-                        </li>
-                        <li>
+                        <!--<li>
                             <p>// 💯 To Share //</p>
                                 <ul>
                                     <li>
@@ -80,7 +119,7 @@
                                         <iframe style="border: 0; width: 600px; height:472px;" src="https://bandcamp.com/EmbeddedPlayer/album=520952754/size=large/bgcol=fafafa/linkcol=de270f/artwork=small/transparent=true/" seamless><a href="http://oscarno.bandcamp.com/album/to-share">To Share by @oscarno_</a></iframe>
                                     </li>
                                 </ul>
-                            </li>
+                        </li>-->
                     </ul>
                 </details>  
                 <footer><p>// code by me :) // (c) Oscar Jemmott, 2024 //</p></footer>
