--- a/showreel.html
+++ b/showreel.html
@@ -38,7 +38,7 @@
                     </summary>
                     <ul>
                         <li>
-                            <p>A small collection of recent works. For more, head to <a href="https://oscarjemmott.com", class="clickable">my website homepage</a></p>
+                            <p>A small collection of recent works focusing on interactive audio. For more, head to <a href="https://oscarjemmott.com", class="clickable">my website homepage</a></p>
                         </li>
                         <li>
                             <details open='true'>
