--- a/showreel.html
+++ b/showreel.html
@@ -66,7 +66,7 @@
                                 <ul>
                                     <li>
                                         <p>
-                                            As a part of my work at Splash, I managed high volumes of audio assets moving in a out of the roblox game on a weekly basis, as well as some sound design. Along with work on other projects like a generative music app. Here are some sound design highlights: 
+                                            As a part of my work at Splash, I managed high volumes of audio assets moving in and out of the roblox game on a weekly basis, as well as some sound design. Along with work on other projects like a generative music app. Here are some sound design highlights: 
                                         </p>
                                     </li>
                                     <li>
