flexbox jam collabs at the bottom of showreel

--- a/showreel.html
+++ b/showreel.html
@@ -109,6 +109,34 @@
                                 </ul>
                             </details>
                         </li>
+                        <li>
+                            <details open='true'>
+                                <summary>
+                                    <p class="clickable">// 🍓 Game Jam Collaborations //</p>
+                                </summary>
+                                    <p>Here are games I've worked with others on. You can check them out on <a class="clickable" href="https://oscarj.itch.io/">my itch.io page</a></p>
+                                <div class="flex-container">
+                                    <a href="https://oscarj.itch.io/the-family-and-the-fearless">
+                                        <img src="https://img.itch.zone/aW1nLzE3NDk5OTI3LnBuZw==/315x250%23cb/PHM4Z1.png" class="clickable">    
+                                    </a>
+                                    <a href="https://mungahh.itch.io/gob-in-ya-gob">
+                                        <img src="https://img.itch.zone/aW1nLzExMjI0Mzk5LnBuZw==/315x250%23c/hCQkqg.png" class="clickable">    
+                                    </a>
+                                    
+                                    <a href="https://pneumavoid.itch.io/grave-guard">
+                                       <img src="https://img.itch.zone/aW1nLzcyNzQxNDcucG5n/315x250%23c/de5NUq.png" class="clickable"> 
+                                    </a>
+
+                                    <a href="https://louis-vd.itch.io/glimmersmith">
+                                        <img src="https://img.itch.zone/aW1nLzM5Mjk3MDEucG5n/315x250%23c/kwgic1.png" class="clickable">
+                                    </a>
+                                    
+                                    <a href="https://hawkhawkins.itch.io/arm-game">
+                                        <img src="https://img.itch.zone/aW1nLzQzOTU5NTgucG5n/315x250%23c/j7Jl96.png" class="clickable">
+                                    </a>
+                                </div>
+                            </details>
+                        </li>
                         <!--<li>
                             <p>// 💯 To Share //</p>
                                 <ul>
