--- a/index.html
+++ b/index.html
@@ -37,32 +37,37 @@
                         <span class='clickable'>// ✨ New and Exciting //</span>
                     </summary>
                     <ul>
-                         <li>
+                        <li>
                             <details open='true'>
                                 <summary>
-                                    <span class = "clickable">👻 Soul Air</span>
+                                    <span class="clickable">
+                                        ♥️ Memory Card Audio!
+                                    </span>
                                 </summary>
                                 <ul>
-                                    <li>
-                                        <p>An arcade style PICO-8 game. Play as a ghost retrieving their soul before time runs out! Play below (even on your phone 😎)</p> 
-                                        <p><iframe src="https://www.lexaloffle.com/bbs/widget.php?pid=soulair" allowfullscreen width="600" height="600"style="border:none; overflow:hidden"></iframe></p>
-                                    </li>
+                                    <p>
+                                        I'm proud to share that I'm launching my audio business Memory Card Audio! You can check out the first collection of music right here! and purchase it on <a href="https://memory-card-audio.itch.io/bug-village" class="clickable">👉 itch</a>!
+                                    </p>
+                                    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?si=xkOs6wJrIi_Tmr1s&amp;list=PLJCLObdFTclyLY8l3u2DETOFwOg7DMDkk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                                 </ul>
                             </details>
                         </li>
                         <li>
                             <details open='true'>
                                 <summary>
-                                    <span class = "clickable">🗻 Wandering in Rambley Valley Music!</span>
+                                    <span class="clickable">💰 We Have You Surrounded! </span>
                                 </summary>
                                 <ul>
-                                    <li>
-                                        <p><iframe style="border: 0; width: 100%; height: 310px;" src="https://bandcamp.com/EmbeddedPlayer/album=560484489/size=large/bgcol=ffffff/linkcol=0687f5/artwork=small/transparent=true/" seamless><a href="https://oscarno.bandcamp.com/album/wandering-in-rambley-valley-original-soundtrack">Wandering In Rambley Valley Original Soundtrack by @oscarno_</a></iframe></p>
-                                    </li>
-                                </ui>
-                            </details>
+                                    <p>
+                                        You're a goon on the loose, but the fuzz are hot on your tail! Survive for as long as possible and collect as much loot as you can before you're done in.
+                                    </p>
+                                    <p>
+                                        <iframe src="https://www.lexaloffle.com/bbs/widget.php?pid=wehaveyousurrounded" allowfullscreen width="621" height="513" style="border:none; overflow:hidden"></iframe>
+                                    </p>
+                                </ul>
+                            </details>    
                         </li>
-                    </ul>
+                    </ui>
                 </details>
                 <details>
                     <summary>
@@ -493,6 +498,20 @@
                         <li>
                             <details>
                                 <summary>
+                                    <span class="clickable">
+                                        🐛 Tunes From Bug Village
+                                    </span>
+                                </summary>
+                                <ul>
+                                    <li>
+                                        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?si=xkOs6wJrIi_Tmr1s&amp;list=PLJCLObdFTclyLY8l3u2DETOFwOg7DMDkk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                    </li>
+                                </ul>
+                            </details>
+                        </li>
+                        <li>
+                            <details>
+                                <summary>
                                     <span class='clickable'>💯 To Share</span>
                                 </summary>
                                 <ul>
@@ -538,7 +557,7 @@
                     </ul>
                 </details>
                 <div class="links">
-                    //<address><a href="mailto:oscarj.sounds@gmail.com" class='clickable'> ✉️ </a></address>//<a href="https://bsky.app/profile/oscarno.bsky.social" class="clickable"> 🦋 </a>//
+                    //<address><a href="mailto:contact@memorycardaudio.com" class='clickable'> ✉️ </a></address>//<a href="https://bsky.app/profile/oscarno.bsky.social" class="clickable"> 🦋 </a>//
                 </div>
                 <footer><p>// code by me :) // (c) Oscar Jemmott, 2024 //</p></footer>
             </div>
