Gameloft Portfolio page

--- a/showreel.html
+++ b/showreel.html
@@ -18,7 +18,7 @@
             <h1>Oscar Jemmott</h1>
             <p>Music and Sound for Media</p>
             <div class="content"> 
-            <details open='true'>
+            <details>
                     <summary>
                         <span class='clickable'>// 📝 about //</span>
                     </summary>
