Dead Ears in New & Exciting

--- a/index.html
+++ b/index.html
@@ -55,17 +55,28 @@
                         <li>
                             <details open='true'>
                                 <summary>
-                                    <span class="clickable">💰 We Have You Surrounded! </span>
+                                    <span class='clickable'>
+                                        🌽 Dead Ears
+                                    </span>
                                 </summary>
                                 <ul>
-                                    <p>
-                                        You're a goon on the loose, but the fuzz are hot on your tail! Survive for as long as possible and collect as much loot as you can before you're done in.
-                                    </p>
-                                    <p>
-                                        <iframe src="https://www.lexaloffle.com/bbs/widget.php?pid=wehaveyousurrounded" allowfullscreen width="621" height="513" style="border:none; overflow:hidden"></iframe>
-                                    </p>
+                                    <li>
+                                        </br>
+                                        <a href="https://swampsnail.itch.io/dead-ears" target="_blank">
+                                            <img src="https://img.itch.zone/aW1hZ2UvMzY3MzkwMS8yMTg3NjQ4MC5wbmc=/original/I%2BkNDo.png"width=560px class="clickable"/>
+                                        </a>
+                                        <p>
+                                            The cornfield stretches on forever.
+                                            A light stands blinking atop a distant tower.
+                                            A voice crackles over the radio...
+                                        </p>
+                                        <p>
+                                            Dead Ears was made as a part of the <a href="https://itch.io/jam/scream-forever" class="clickable">Scream Forever</a> game jam. You can play it <a href="https://swampsnail.itch.io/dead-ears" class="clickable">here</a>.
+                                        </p>
+                                    </li>
                                 </ul>
-                            </details>    
+                               
+                            </details>
                         </li>
                     </ui>
                 </details>
@@ -79,7 +90,22 @@
                                 Games that I've worked on. Some are just music or sound design, others are solo dev projects.
                             </p>
                         </li>
-                         <li>
+                        <li>
+                            <details open='true'>
+                                <summary>
+                                    <span class="clickable">💰 We Have You Surrounded! </span>
+                                </summary>
+                                <ul>
+                                    <p>
+                                        You're a goon on the loose, but the fuzz are hot on your tail! Survive for as long as possible and collect as much loot as you can before you're done in.
+                                    </p>
+                                    <p>
+                                        <iframe src="https://www.lexaloffle.com/bbs/widget.php?pid=wehaveyousurrounded" allowfullscreen width="621" height="513" style="border:none; overflow:hidden"></iframe>
+                                    </p>
+                                </ul>
+                            </details>    
+                        </li>
+                        <li>
                             <details>
                                 <summary>
                                     <span class = "clickable">🪐 SumOrbit - <em>Jett Williams</em></span>
