dead ears blurb update

--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
                                             <img src="https://img.itch.zone/aW1hZ2UvMzY3MzkwMS8yMTg3NjQ4MC5wbmc=/original/I%2BkNDo.png"width=560px class="clickable"/>
                                         </a>
                                         <p>
+                                            I had the pleasure of doing the sound design for this horror game, along with some programming and game design!
+                                        </p>
+                                        <p>
                                             The cornfield stretches on forever.
                                             A light stands blinking atop a distant tower.
                                             A voice crackles over the radio...
